--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <iframe id="intro-video" width="560" height="315" 
       src="https://www.youtube.com/embed/2DMl0zoaPZ0?enablejsapi=1" 
       title="Vidéo Brad Bitt" frameborder="0" allow="autoplay" allowfullscreen></iframe>
-    <button id="next-button" class="disabled" disabled>Suivant</button>
+    <button id="next-button" class="disabled" disabled onclick="goToNextStep()">Suivant</button>
     <p class="small-text">Le bouton apparaîtra à la fin de la vidéo</p>
   </div>
 
