--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     <input type="text" id="secret-code" placeholder="Code secret"/>
     <button onclick="checkSecretCode()">🔒</button>
   </div>
+  <div id="next-step" class="hidden">
+  <h2>Bienvenue dans la suite de l'aventure !</h2>
+  <p>Ici commenceront les gages ou autres étapes.</p>
+</div>
+
 
   <script src="script.js"></script>
 </body>
