--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
 <p id="next-hint">Le bouton "Suivant" sera disponible à la fin de la vidéo.</p>
 
   <script src="script.js"></script>
+      <script src="https://www.youtube.com/iframe_api"></script>
 </body>
 </html>
