--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 </div>
 <button id="next-button" class="disabled" disabled>Suivant</button>
 <p id="next-hint">Le bouton "Suivant" sera disponible à la fin de la vidéo.</p>
+      <script src="script.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
 </body>
 </html>
