--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Brad Bitt - Mission Gages</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+ <script src="https://www.youtube.com/iframe_api"></script> 
 <body>
   <div id="secret-access">
     <input type="password" placeholder="Code secret..." id="secret-code" />
