--- a/index.html
+++ b/index.html
@@ -7,116 +7,81 @@
 </head>
 <body>
 
-  <!-- 1. COMPTE À REBOURS & ACCÈS SECRET -->
-  <div id="intro-screen">
+  <!-- 1. COMPTE À REBOURS + ACCÈS SECRET -->
+  <div id="intro">
     <h1>Lancement dans :</h1>
-    <div id="countdown">--</div>
-    <div id="secret-access">
-      <input type="password" id="secret-code" placeholder="Code secret…">
+    <div id="countdown"></div>
+    <div id="secret">
+      <input type="password" id="secretCode" placeholder="Code secret…">
       <button onclick="checkSecret()">OK</button>
     </div>
   </div>
 
-  <!-- 2. BOUTON COMMENCER -->
-  <div id="start-screen" class="hidden">
-    <button id="start-btn" onclick="startAnimation()">Commencer l’aventure</button>
+  <!-- 2. BOUTON LANCEMENT -->
+  <div id="launch" class="hidden">
+    <button onclick="playAnimation()">Commencer l’aventure</button>
   </div>
 
-  <!-- 3. ANIMATION + MOT DE PASSE TONDEUSE -->
-  <div id="animation-screen" class="hidden">
-    <h1 id="animated-text" class="impact"></h1>
-    <input type="password" id="main-password" placeholder="Mot de passe…">
-    <button onclick="checkMainPassword()">Valider</button>
-    <p id="main-error" class="error"></p>
+  <!-- 3. ANIMATION + CODE TONDEUSE -->
+  <div id="screenAnim" class="hidden">
+    <h1 id="animText" class="impact"></h1>
+    <input type="password" id="mainCode" placeholder="Code tondeuse…">
+    <button onclick="checkMainCode()">Valider</button>
+    <p id="mainError" class="error"></p>
   </div>
 
-  <!-- 4. VIDÉO INTRO (YouTube IFrame API) -->
-  <div id="video-intro-screen" class="hidden">
+  <!-- 4. VIDÉO INTRODUCTIVE -->
+  <div id="screenIntroVid" class="hidden">
     <h2>Un message de Brad Bitt</h2>
-    <div id="player-intro"></div>
-    <button id="next-from-intro" class="disabled" disabled onclick="showMap()">Suivant</button>
-    <p class="hint">Vous devez regarder la vidéo jusqu’à la fin.</p>
+    <div id="player_intro"></div>
+    <button id="nextIntro" class="disabled" disabled onclick="enterMap()">Suivant</button>
+    <p class="hint">Vous devez visionner jusqu’à la fin.</p>
   </div>
 
   <!-- 5. CARTE DES LIEUX -->
-  <div id="map-screen" class="hidden">
-    <h2>Carte au trésor</h2>
-    <ul class="map-list">
-      <li><button onclick="enterSection('lille')">• Lille</button></li>
+  <div id="screenMap" class="hidden">
+    <h2>Carte de l’aventure</h2>
+    <ul>
+      <li><button onclick="openSection('lille')">• Lille</button></li>
       <li>
-        <button id="btn-bk" class="locked" disabled>• ???</button>
-        <div class="code-container"><input type="password" id="code-bk" placeholder="Code…"><button onclick="unlock('bk')">OK</button></div>
+        <button id="btnBK" class="locked" disabled>• ???</button>
+        <input type="password" id="codeBK" placeholder="Code…">
+        <button onclick="unlock('bk')">OK</button>
       </li>
       <li>
-        <button id="btn-lg" class="locked" disabled>• ???</button>
-        <div class="code-container"><input type="password" id="code-lg" placeholder="Code…"><button onclick="unlock('lg')">OK</button></div>
+        <button id="btnLG" class="locked" disabled>• ???</button>
+        <input type="password" id="codeLG" placeholder="Code…">
+        <button onclick="unlock('lg')">OK</button>
       </li>
     </ul>
   </div>
 
-  <!-- 6. SECTION LILLE -->
-  <div id="section-lille" class="hidden section">
-    <h2>📍 Lille</h2>
-    <button onclick="spin('lille')">🎲 Tirages</button>
-    <p id="name-lille"></p>
-    <p id="gage-lille"></p>
-    <ul id="list-lille" class="gage-list"></ul>
-    <button id="confirm-lille" class="disabled" disabled onclick="confirmSection('lille')">✅ Oui</button>
+  <!-- 6. SECTION GENERIQUE POUR GAGES (LILLE/BK/LG) -->
+  <div id="section" class="hidden">
+    <h2 id="sectionTitle"></h2>
+    <p id="sectionNote" class="red"></p>
+    <button onclick="spin()">🎲 Tirage prénom + gage</button>
+    <p id="spinName"></p>
+    <p id="spinGage"></p>
+    <ul id="gageList"></ul>
+    <button id="confirmBtn" class="disabled" disabled>✅ Oui</button>
     <button onclick="backToMap()">❌ Non</button>
   </div>
 
-  <!-- 7. VIDÉO FÉLICITATIONS LILLE -->
-  <div id="congrats-lille" class="hidden section">
-    <div id="player-lille"></div>
-    <input type="password" id="final-lille" placeholder="Code…">
-    <button onclick="submitCode('lille')">OK</button>
-    <p id="error-lille" class="error"></p>
+  <!-- 7. VIDÉOS FÉLICITATIONS + CODES -->
+  <div id="congrats" class="hidden">
+    <div id="player_section"></div>
+    <input type="password" id="finalCode" placeholder="Code…">
+    <button id="submitCodeBtn">OK</button>
+    <p id="finalError" class="error"></p>
   </div>
 
-  <!-- 8. SECTION BURGER KING -->
-  <div id="section-bk" class="hidden section">
-    <h2>📍 Burger King</h2>
-    <button onclick="spin('bk')">🎲 Tirages</button>
-    <p id="name-bk"></p>
-    <p id="gage-bk"></p>
-    <ul id="list-bk" class="gage-list"></ul>
-    <button id="confirm-bk" class="disabled" disabled onclick="confirmSection('bk')">✅ Oui</button>
-    <button onclick="backToMap()">❌ Non</button>
-  </div>
-
-  <!-- 9. VIDÉO FÉLICITATIONS BK -->
-  <div id="congrats-bk" class="hidden section">
-    <div id="player-bk"></div>
-    <input type="password" id="final-bk" placeholder="Code…">
-    <button onclick="submitCode('bk')">OK</button>
-    <p id="error-bk" class="error"></p>
-  </div>
-
-  <!-- 10. SECTION LASER GAMES -->
-  <div id="section-lg" class="hidden section">
-    <h2>📍 Laser Games</h2>
-    <p class="red">Chacun doit prendre le pseudo d’un autre !</p>
-    <button onclick="spin('lg')">🎲 Tirages</button>
-    <p id="name-lg"></p>
-    <p id="gage-lg"></p>
-    <ul id="list-lg" class="gage-list"></ul>
-    <button id="confirm-lg" class="disabled" disabled onclick="confirmSection('lg')">✅ Oui</button>
-    <button onclick="backToMap()">❌ Non</button>
-  </div>
-
-  <!-- 11. VIDÉO FÉLICITATIONS LG -->
-  <div id="congrats-lg" class="hidden section">
-    <div id="player-lg"></div>
-    <button id="final-next" class="disabled" disabled onclick="showFinal()">Suivant</button>
-    <p class="hint">Vous devez regarder la vidéo jusqu’à la fin.</p>
-  </div>
-
-  <!-- 12. ÉCRAN FINAL -->
-  <div id="final-screen" class="hidden section">
+  <!-- 8. ÉCRAN FINAL -->
+  <div id="finalScreen" class="hidden">
     <p class="italic">Merci d’avoir joué</p>
   </div>
 
-  <!-- YouTube IFrame API + notre script -->
+  <!-- API YouTube + Script principal -->
   <script src="https://www.youtube.com/iframe_api"></script>
   <script src="script.js"></script>
 </body>
